# torch-dplr

./: .gitignore  CITATION.cff  README.md  junit.xml  pyproject.toml
.github/workflows/: mirror.yml  test_python.yml
backend/: __init__.py  backend.py  dynamic_metadata.py
tests/: test_dipole_charge.py
tests/data/dipole/: frozen_model.pbtxt  input.json  run.sh  torch_input.json
tests/data/energy/: torch_input.json
torch_dplr/: __init__.py  dipole_charge.py
